--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-static/* linguist-vendored
-*.js linguist-detectable=true
+*.cpp linguist-language=C++
+*.h linguist-language=C++
 
+*.js linguist-generated
